:monocle_face: fix WGS metadata

--- a/notebooks/exploratory/0.17.1.bunop-isheep_WGS.ipynb
+++ b/notebooks/exploratory/0.17.1.bunop-isheep_WGS.ipynb
@@ -34,11 +34,12 @@
     "\n",
     "from tqdm.notebook import tqdm\n",
     "from mongoengine.errors import DoesNotExist, MultipleObjectsReturned\n",
+    "from mongoengine.queryset import Q\n",
     "\n",
     "from src.features.smarterdb import global_connection, VariantSheep\n",
     "from src.features.utils import get_interim_dir, get_project_dir\n",
     "from src.features.plinkio import BinaryPlinkIO, CodingException\n",
-    "from src.data.common import WORKING_ASSEMBLIES"
+    "from src.data.common import WORKING_ASSEMBLIES, AssemblyConf"
    ]
   },
   {
@@ -74,7 +75,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ba49fa56ce149bf90bbb3f38cec7576",
+       "model_id": "ab07dd7a1d044cfea163e9ed1ecc5136",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,12 +134,24 @@
     "It's time to extract the sheep smarter variants from the VCF files. Then merge all files into one VCF:\n",
     "\n",
     "```bash\n",
-    "for i in $(seq 1 26); do echo \"tabix -h -R chr$i\\_regions.tsv output_chr$i.snp.filtered.vcf.gz | bgzip --compress-level 9 --stdout > smarter_chr$i\\_regions.vcf.gz; tabix smarter_chr$i\\_regions.vcf.gz\" >> commands.sh ; done\n",
-    "echo \"tabix -h -R chrX\\_regions.tsv output_chrX.snp.filtered.vcf.gz | bgzip --compress-level 9 --stdout > smarter_chrX\\_regions.vcf.gz; tabix smarter_chrX\\_regions.vcf.gz\" >> commands.sh\n",
-    "parallel --jobs 12 < commands.sh\n",
-    "vcf-concat smarter_chr*.vcf.gz | bgzip -@12 --stdout > WGS-all/WGS-all.smarter.vcf.gz\n",
-    "tabix WGS-all/WGS-all.smarter.vcf.gz\n",
-    "plink --chr-set 26 --allow-extra-chr --vcf WGS-all/WGS-all.smarter.vcf.gz --make-bed --double-id --out WGS-all/WGS-all.smarter\n",
+    "cat /dev/null > commands.sh\n",
+    "for i in $(seq 1 26); do echo \"tabix -h -R chr$i\\_regions.tsv output_chr$i.snp.filtered.vcf.gz | bgzip --compress-level 9 --stdout > smarter_chr$i\\_regions.vcf.gz ; tabix smarter_chr$i\\_regions.vcf.gz\" >> commands.sh ; done\n",
+    "echo \"tabix -h -R chrX\\_regions.tsv output_chrX.snp.filtered.vcf.gz | bgzip --compress-level 9 --stdout > smarter_chrX\\_regions.vcf.gz ; tabix smarter_chrX\\_regions.vcf.gz\" >> commands.sh\n",
+    "\n",
+    "cat << 'EOF' > SMARTER-isheep-WGS.sh\n",
+    "#!/bin/bash\n",
+    "#SBATCH --job-name=SMARTER-isheep-WGS\n",
+    "#SBATCH --ntasks=1\n",
+    "#SBATCH --cpus-per-task=12\n",
+    "#SBATCH --mem=24gb\n",
+    "#SBATCH --output=SMARTER-isheep-WGS.log\n",
+    "\n",
+    "source activate isheep\n",
+    "srun --exact --cpus-per-task $SLURM_CPUS_PER_TASK parallel --jobs $SLURM_CPUS_PER_TASK < commands.sh\n",
+    "srun --exact --cpus-per-task $SLURM_CPUS_PER_TASK vcf-concat smarter_chr*.vcf.gz | bgzip -@$SLURM_CPUS_PER_TASK --stdout > WGS-all/WGS-all.smarter.vcf.gz\n",
+    "srun --exact tabix WGS-all/WGS-all.smarter.vcf.gz\n",
+    "srun --exact plink --chr-set 26 --allow-extra-chr --vcf WGS-all/WGS-all.smarter.vcf.gz --make-bed --double-id --out WGS-all/WGS-all.smarter\n",
+    "EOF\n",
     "```\n",
     "\n",
     "Please note that in the final plink file `WGS-all.smarter.bim` SNPs have no name: this need to be fixed with the `VariantSheep.name` field in order to be merged with the SMARTER dataset. I can define a custom method to search variants by position (not by name)"
@@ -172,38 +185,29 @@
     "        except CodingException:\n",
     "            return False\n",
     "        \n",
-    "    def fetch_coordinates_by_positions(self, src_assembly: dict, dst_assembly: dict):\n",
+    "    def fetch_coordinates_by_positions(self, src_assembly: AssemblyConf, dst_assembly: AssemblyConf):\n",
     "        # reset meta informations\n",
-    "        self.locations = list()\n",
+    "        self.src_locations = list()\n",
+    "        self.dst_locations = list()\n",
     "        self.filtered = set()\n",
     "        self.variants_name = list()\n",
-    "\n",
-    "        # helper function\n",
-    "        def skip_index(idx):\n",
-    "            # skip this variant (even in ped)\n",
-    "            self.filtered.add(idx)\n",
-    "\n",
-    "            # need to add an empty value in locations (or my indexes\n",
-    "            # won't work properly). The same for variants name\n",
-    "            self.locations.append(None)\n",
-    "            self.variants_name.append(None)\n",
     "        \n",
     "        for idx, record in enumerate(tqdm(self.mapdata, mininterval=2)):\n",
-    "            location = src_assembly.copy()\n",
+    "            location = src_assembly._asdict()\n",
     "            location[\"chrom\"] = record.chrom\n",
     "            location[\"position\"] = record.position\n",
     "            \n",
     "            # attempt to fix-up 27 chrom\n",
     "            if int(location[\"chrom\"]) == 27:\n",
     "                location[\"chrom\"] = \"X\"\n",
+    "            \n",
+    "            # construct the final query\n",
+    "            query = [Q(locations__match=location) &\n",
+    "                     Q(locations__match=dst_assembly._asdict())]\n",
     "        \n",
     "            try:\n",
     "                variant = self.VariantSpecies.objects(\n",
-    "                    locations__match=location,\n",
-    "                ).fields(\n",
-    "                    elemMatch__locations=dst_assembly,\n",
-    "                    name=1,\n",
-    "                    rs_id=1\n",
+    "                    *query\n",
     "                ).get()\n",
     "            \n",
     "            except DoesNotExist as e:\n",
@@ -211,7 +215,7 @@
     "                    f\"Couldn't find {record.chrom}:{record.position} in {src_assembly}\"\n",
     "                    f\" assembly: {e}\")\n",
     "\n",
-    "                skip_index(idx)\n",
+    "                self.skip_index(idx)\n",
     "\n",
     "                # don't check location for missing SNP\n",
     "                continue\n",
@@ -223,17 +227,17 @@
     "                    f\"Got multiple {record.chrom}:{record.position} in {src_assembly}\"\n",
     "                    f\" assembly: {e}\")\n",
     "\n",
-    "                skip_index(idx)\n",
+    "                self.skip_index(idx)\n",
     "\n",
     "                # don't check location for missing SNP\n",
     "                continue\n",
     "                \n",
-    "            # using projection I will have only one location if I could\n",
-    "            # find a SNP\n",
-    "            location = variant.locations[0]\n",
+    "            # get the proper locations and track it\n",
+    "            src_location = variant.get_location(**src_assembly._asdict())\n",
+    "            self.src_locations.append(src_location)\n",
     "\n",
-    "            # track data for this location\n",
-    "            self.locations.append(location)\n",
+    "            dst_location = variant.get_location(**dst_assembly._asdict())\n",
+    "            self.dst_locations.append(dst_location)\n",
     "\n",
     "            # track variant.name read from database (useful when searching\n",
     "            # using probeset_id)\n",
@@ -249,7 +253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba7c1431ff72492f848ef0ab773187cf",
+       "model_id": "409f23153f7a467d9ca0ae47a9efd665",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,7 +269,7 @@
     "prefix = str(get_project_dir() / \"data/external/SHE/ISHEEP/WGS-all/WGS-all.smarter\")\n",
     "plinkio = CustomBinaryPlinkIO(prefix= prefix, species=\"Sheep\", chip_name=\"IlluminaOvineSNP50\")\n",
     "plinkio.read_mapfile()\n",
-    "plinkio.fetch_coordinates_by_positions(src_assembly=OAR4._asdict(), dst_assembly=OAR3._asdict())"
+    "plinkio.fetch_coordinates_by_positions(src_assembly=OAR4, dst_assembly=OAR3)"
    ]
   },
   {
@@ -285,7 +289,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92a41c3e60e649de888b5f2f80c25c19",
+       "model_id": "936f3eacf3cd41378c804753705e1d99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,7 +304,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Error for SNP 2:.: T/T <> A/C\n"
+      "Error for SNP 2: '.': T/T <> A/C\n"
      ]
     },
     {
@@ -335,7 +339,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "841970449d26498b9a4d96c3c8234a03",
+       "model_id": "021837a925294b1d904c5d73194c59ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -350,7 +354,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Error for SNP 59:.: T/T <> A/G\n"
+      "Error for SNP 59: '.': T/T <> A/G\n"
      ]
     },
     {
@@ -399,7 +403,7 @@
     "    a1 = sample_genotypes[6+idx*2]\n",
     "    a2 = sample_genotypes[6+idx*2+1]\n",
     "    genotype = [a1, a2]\n",
-    "    location = plinkio.locations[idx]\n",
+    "    location = plinkio.src_locations[idx]\n",
     "    name = plinkio.variants_name[idx]\n",
     "\n",
     "    if not location.is_forward(genotype):\n",
@@ -437,7 +441,7 @@
     "    counter = 0\n",
     "    \n",
     "    for idx, locus in enumerate(plinkio.plink_file.get_loci()):\n",
-    "        location = plinkio.locations[idx]\n",
+    "        location = plinkio.src_locations[idx]\n",
     "        \n",
     "        if not location:\n",
     "            # some SNPs have already been removed\n",
@@ -453,9 +457,9 @@
     "            # add SNP to filtered set\n",
     "            plinkio.filtered.add(idx)\n",
     "\n",
-    "    \n",
     "    print(f\"{counter} SNPs are not in forward and were removed\")\n",
-    "    \n",
+    "\n",
+    "\n",
     "drop_variants(plinkio)"
    ]
   },
@@ -476,7 +480,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e25f9193d0c46bdba66993a78b220c0",
+       "model_id": "04d057a386aa43338ac3667d6ede971b",
        "version_major": 2,
        "version_minor": 0
       },
