--- a/notebooks/exploratory/0.17.3-bunop-fix-isheep-fid.ipynb
+++ b/notebooks/exploratory/0.17.3-bunop-fix-isheep-fid.ipynb
@@ -19,10 +19,22 @@
    "outputs": [],
    "source": [
     "import csv\n",
+    "import logging\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "from src.features.utils import get_project_dir\n",
     "\n",
+    "logger = logging.getLogger(__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d03bfe36-760d-41cf-9d01-d1c0e8d59a6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "isheep_data_path = get_project_dir() / \"data/external/SHE/ISHEEP\"\n",
     "refined_50K_file = isheep_data_path / \"isheep_50K_refined.xlsx\"\n",
     "fam_file = isheep_data_path / \"50K-all/50K-all.fam\""
@@ -38,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e2ad6e41-a868-415a-9a88-ce2b14347b2e",
    "metadata": {},
    "outputs": [],
@@ -56,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b01f3218-bff4-47d3-b4ac-dcedf7fc0f17",
    "metadata": {},
    "outputs": [],
@@ -76,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b34a6b08-71ce-40ef-9347-9d228ce18fc3",
    "metadata": {},
    "outputs": [],
@@ -95,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "34e941b5-98fd-4605-94c1-9d252520169b",
    "metadata": {},
    "outputs": [],
@@ -115,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "47c00f70-a442-4d97-ae88-30d33c1daa8c",
    "metadata": {},
    "outputs": [],
@@ -143,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "27d1c9c9-d8fe-4d55-8c6e-b2a8a9e77cd1",
    "metadata": {},
    "outputs": [],
@@ -162,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "72a2ac4b-f681-4ae5-a391-de4fec8a3127",
    "metadata": {},
    "outputs": [],
@@ -180,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "0e52cc1d-6bc1-4e0f-96f1-55b45ed94bbb",
    "metadata": {},
    "outputs": [],
@@ -200,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ea85c1fe-7e79-40a6-9add-34b22ed5c8f0",
    "metadata": {},
    "outputs": [],
@@ -219,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "b42c70d3-0846-414d-a05a-f73e04d33e09",
    "metadata": {},
    "outputs": [],
@@ -239,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c31c535f-509e-4ecc-a80d-25ed069a1a4f",
    "metadata": {},
    "outputs": [],
@@ -252,6 +264,133 @@
   {
    "cell_type": "markdown",
    "id": "3f089f11-62bf-4aaa-975d-3bc210969bc2",
+   "metadata": {},
+   "source": [
+    "This fixed file need to replace the original `.fam` file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4abc7302-de5c-4644-838a-131985c70352",
+   "metadata": {},
+   "source": [
+    "# WGS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "abd861f1-911a-499f-a2b9-0836457e1224",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "refined_WGS_file = isheep_data_path / \"isheep_WGS_refined.xlsx\"\n",
+    "fam_file = isheep_data_path / \"WGS-all/WGS-all.smarter.fam\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "881c0ec4-b096-486d-baaf-d3fabd8c29b0",
+   "metadata": {},
+   "source": [
+    "Read the refined file with codes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "dcba6770-af42-4880-8c67-5fde10b2972d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "refined_WGS = pd.read_excel(refined_WGS_file, sheet_name=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1b8a595-800a-4d5b-88d5-61221e52c4ab",
+   "metadata": {},
+   "source": [
+    "Now open the fam file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "99c78ff8-9ecf-4c36-8d7b-d5a006972663",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(fam_file) as handle:\n",
+    "    data = handle.readlines()\n",
+    "    data = [line.strip().split() for line in data]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f40f3576-fc34-4036-9814-4d538ee0f74a",
+   "metadata": {},
+   "source": [
+    "Write an helper function to get the proper *FID* from refined file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9d24ffa2-b778-4af5-b2bf-0abe707a3dbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_code(sample_id):\n",
+    "    try:\n",
+    "        return refined_WGS[refined_WGS[\"alias\"] == sample_id]['code'].values[0]\n",
+    "    except IndexError:\n",
+    "        logger.error(f\"Cannot find '{sample_id}'\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44c08f67-7d60-43ac-9192-94d902a772f0",
+   "metadata": {},
+   "source": [
+    "replace *FID* with the proper code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a46d8fe1-437d-48d3-abf5-ca61f7975d8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for line in data:\n",
+    "    # writing over list reference\n",
+    "    line[0] = get_code(line[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0adbda94-36e3-4daa-a84a-b4298963d68b",
+   "metadata": {},
+   "source": [
+    "Write down the corrected file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d06cac26-1b22-4b9c-aa46-f3edc1a80e81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(isheep_data_path / \"WGS-all/WGS-all.smarter-fixed.fam\", \"w\") as handle:\n",
+    "    writer = csv.writer(handle, delimiter=\" \", lineterminator=\"\\n\")\n",
+    "    writer.writerows(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e2e378c-91f4-4883-92d7-9fe8d8eb9c70",
    "metadata": {},
    "source": [
     "This fixed file need to replace the original `.fam` file"
