:sparkles: add isheep WGS genotypes

--- a/notebooks/exploratory/0.17.3-bunop-fix-isheep-fid.ipynb
+++ b/notebooks/exploratory/0.17.3-bunop-fix-isheep-fid.ipynb
@@ -393,16 +393,46 @@
    "id": "0e2e378c-91f4-4883-92d7-9fe8d8eb9c70",
    "metadata": {},
    "source": [
-    "This fixed file need to replace the original `.fam` file"
+    "This fixed file need to replace the original `.fam` file. Need also to replace the `27` chromosome with `X`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "92060227-f210-4cd9-8aa1-ebb77eb6b3bc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bim_file = isheep_data_path / \"WGS-all/WGS-all.smarter.bim\"\n",
+    "\n",
+    "with open(bim_file) as handle:\n",
+    "    data = handle.readlines()\n",
+    "    data = [line.strip().split() for line in data]\n",
+    "    \n",
+    "for line in data:\n",
+    "    if line[0] == \"27\":\n",
+    "        line[0] = \"X\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4cfc6ef7-0da1-4be0-b694-ac818d69b63e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(isheep_data_path / \"WGS-all/WGS-all.smarter-fixed.bim\", \"w\") as handle:\n",
+    "    writer = csv.writer(handle, delimiter=\"\\t\", lineterminator=\"\\n\")\n",
+    "    writer.writerows(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c656cb4e-468f-443b-af79-9626d3be996e",
+   "metadata": {},
+   "source": [
+    "Also this fixed `.bim` file need to replace the original file"
+   ]
   }
  ],
  "metadata": {
