:monocle_face: update result reports

--- a/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
+++ b/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
@@ -5,12 +5,14 @@
    "id": "3cc84f47-db82-43eb-99fd-78768ecd2a99",
    "metadata": {},
    "source": [
-    "# SMARTER SUMMARY (2022/05/14)\n",
+    "# SMARTER SUMMARY (2022/09/23)\n",
     "* [Dataset composition](#datasets-composition)\n",
     "    - [Foreground / background datasets](#foreground-vs-background-datasets)\n",
     "    - [Datasets by chip type](#datasets-by-chip-type)\n",
     "* [Samples composition](#samples-composition)\n",
     "    - [Foreground / background samples for sheep](#foreground-background-samples-sheep)\n",
+    "    - [Sheep samples by chip type](#sheep-sample-by-chip-type)\n",
+    "    - [Sheep sample locations](#sheep-sample-locations)\n",
     "    - [Foreground / background samples for goat](#foreground-background-samples-goat)\n",
     "        - [Grece foreground goat data](#greece-foreground-goat-data)\n",
     "        - [Sweden foreground goat data](#sweden-foreground-goat-data)"
@@ -23,6 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import defaultdict\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from shapely.geometry import Point\n",
@@ -73,7 +76,7 @@
     "datasets = pd.read_json(tmp).dropna(thresh=1, axis=1)\n",
     "datasets['type'] = datasets['type'].apply(lambda val: val[1])\n",
     "datasets = fix_id(datasets)\n",
-    "datasets[['breed', 'country', 'species', 'type', 'partner', 'chip_name']]"
+    "datasets[['breed', 'country', 'species', 'type', 'partner', 'chip_name', 'n_of_individuals']]"
    ]
   },
   {
@@ -94,6 +97,9 @@
    "outputs": [],
    "source": [
     "plot = datasets.value_counts(\"type\").plot.pie(y=\"type\", figsize=(8,8), shadow=True, startangle=45, rotatelabels=45, autopct='%1.1f%%')\n",
+    "_ = plt.title(\"Foreground vs Background genotype datasets\")\n",
+    "plt.ylabel(None)\n",
+    "plt.savefig('smarter-fgVsbg-datasets.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -115,6 +121,9 @@
    "outputs": [],
    "source": [
     "plot = datasets['chip_name'].value_counts().plot.pie(y=\"chip\", figsize=(8,8), shadow=True, startangle=45, rotatelabels=45, autopct='%1.1f%%')\n",
+    "_ = plt.title(\"Datasets by chip type\")\n",
+    "plt.ylabel(None)\n",
+    "plt.savefig('smarter-datasets-by-chips.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -137,10 +146,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foreground_sheeps = SampleSheep.objects.filter(dataset__in=Dataset.objects.filter(type_=\"foreground\")).fields(country=True, breed=True, chip_name=True, locations=True)\n",
-    "background_sheeps = SampleSheep.objects.filter(dataset__in=Dataset.objects.filter(type_=\"background\")).fields(country=True, breed=True, chip_name=True, locations=True)\n",
+    "foreground_sheeps = SampleSheep.objects.filter(type_=\"foreground\").fields(country=True, breed=True, chip_name=True, locations=True)\n",
+    "background_sheeps = SampleSheep.objects.filter(type_=\"background\").fields(country=True, breed=True, chip_name=True, locations=True)\n",
     "samples_sheep = pd.Series({\"foreground\": foreground_sheeps.count(), \"background\": background_sheeps.count()}, name=\"Sheeps\")\n",
-    "plot = samples_sheep.plot.pie(y=\"Sheeps\", figsize=(8,8), shadow=True, rotatelabels=45, autopct='%1.1f%%')\n",
+    "plot = samples_sheep.plot.pie(y=\"Sheeps\", figsize=(8,8), shadow=True, startangle=90, rotatelabels=45, autopct='%1.1f%%')\n",
+    "_ = plt.title(\"Background VS Foreground sheeps\")\n",
+    "plt.ylabel(None)\n",
     "plt.savefig('sheep-foreground-vs-background-pie.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
@@ -150,7 +161,54 @@
    "id": "acd09527-6075-4c5b-86d2-0dfa3d9c95ee",
    "metadata": {},
    "source": [
-    "Most of the data we have comes from the background dataset. Where are samples locations? where are *background / foreground* data? Read data from database and them add a geometry feature for `GeoDataFrame`:"
+    "Most of the data we have comes from the foreground datasets (after last inserts)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b770e154-70b5-4017-9949-30e82ac10171",
+   "metadata": {},
+   "source": [
+    "<a id='sheep-sample-by-chip-type'></a>\n",
+    "### Sheep samples by chip type\n",
+    "Try to determine the sample composition by chip type:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74aab105-c016-4a98-9d7d-c30fe7d90830",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sheep_by_chip = defaultdict(list)\n",
+    "for chip_name in SampleSheep.objects.distinct(\"chip_name\"):\n",
+    "    sheep_by_chip['chip_name'].append(chip_name) \n",
+    "    sheep_by_chip['count'].append(SampleSheep.objects.filter(chip_name=chip_name).count())\n",
+    "sheep_by_chip = pd.DataFrame.from_dict(sheep_by_chip).set_index(\"chip_name\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce0752ed-af14-4848-8479-7d1fe6b4a969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sheep_by_chip.plot.pie(y=\"count\", figsize=(8,8), shadow=True, startangle=-45, rotatelabels=45, autopct='%1.1f%%', legend=False)\n",
+    "_ = plt.title(\"Sheep samples by chip type\")\n",
+    "plt.ylabel(None)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0523c150-7b6a-4e1d-b3d3-a46d52b786c3",
+   "metadata": {},
+   "source": [
+    "<a id='sheep-sample-locations'></a>\n",
+    "### Sheep sample locations\n",
+    "Where are samples located? where are *background / foreground* data? Read data from database and them add a geometry feature for `GeoDataFrame`:"
    ]
   },
   {
@@ -246,13 +304,13 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(20,20))\n",
-    "world[world.continent == \"Europe\"].plot(ax=ax, color='white', edgecolor='gray')\n",
+    "world.plot(ax=ax, color='white', edgecolor='gray')\n",
     "plot = foreground_sheeps.plot(ax=ax, marker='o', color='red', markersize=5, label=\"foreground\")\n",
     "plot = background_sheeps.plot(ax=ax, marker='x', color='blue', markersize=5, label=\"background\")\n",
     "plot = ax.legend()\n",
     "_ = plt.title(\"SMARTER Sheep Samples foreground\")\n",
-    "_ = plt.xlim([10,40])\n",
-    "_ = plt.ylim([30, 50])\n",
+    "_ = plt.xlim([10,140])\n",
+    "_ = plt.ylim([10, 75])\n",
     "plt.savefig('sheep-foreground.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
@@ -277,6 +335,8 @@
     "background_goats = SampleGoat.objects.filter(dataset__in=Dataset.objects.filter(type_=\"background\")).fields(country=True, breed=True, chip_name=True, locations=True, metadata=True)\n",
     "samples_goat = pd.Series({\"foreground\": foreground_goats.count(), \"background\": background_goats.count()}, name=\"Goats\")\n",
     "plot = samples_goat.plot.pie(y=\"Goat\", figsize=(8,8), shadow=True, rotatelabels=45, autopct='%1.1f%%')\n",
+    "_ = plt.title(\"Background VS Foreground goats\")\n",
+    "plt.ylabel(None)\n",
     "plt.savefig('goat-foreground-vs-background-pie.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
