--- a/notebooks/results/0.3.0-bunop-sheep_metadata.ipynb
+++ b/notebooks/results/0.3.0-bunop-sheep_metadata.ipynb
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sheeps_useful = sheeps[[\"original_id\", \"smarter_id\", \"country\", \"breed\", \"breed_code\", \"type\", \"phenotype.purpose\", \"locations\", \n",
+    "sheeps_useful = sheeps[[\"original_id\", \"smarter_id\", \"country\", \"breed\", \"breed_code\", \"type\", \"phenotype.purpose\", \"locations.coordinates\", \n",
     "                        \"father_id.$oid\", \"mother_id.$oid\", \"sex\", \"dataset_id.$oid\"]]\n",
     "sheeps_useful.head()"
    ]
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [\"partner\", \"n_of_individuals\", \"phenotype.purpose\", \"locations\", \"father_id.$oid\", \"mother_id.$oid\", \"sex\"]\n",
+    "columns = [\"partner\", \"n_of_individuals\", \"phenotype.purpose\", \"locations.coordinates\", \"father_id.$oid\", \"mother_id.$oid\", \"sex\"]\n",
     "d1 = dataset_samples[columns]\n",
     "d2 = pd.DataFrame({\"total\": dataset_samples.sum()[columns]}).transpose()\n",
     "d2 = d2.drop(\"partner\", axis=1)\n",
