--- a/notebooks/results/0.3.1-bunop-goat_metadata.ipynb
+++ b/notebooks/results/0.3.1-bunop-goat_metadata.ipynb
@@ -81,7 +81,7 @@
     "goats_useful = goats[[\n",
     "    \"original_id\", \"smarter_id\", \"country\", \"breed\", \"breed_code\", \"type\", \"phenotype.purpose\", \"phenotype.köppen_group\", \n",
     "    \"phenotype.chest_girth\", \"phenotype.height\", \"phenotype.length\", \"phenotype.widthofpinbones\", \"phenotype.famacha\", \"phenotype.coat_color\", \n",
-    "    \"locations\", \"sex\", \"dataset_id.$oid\"\n",
+    "    \"locations.coordinates\", \"sex\", \"dataset_id.$oid\"\n",
     "]]\n",
     "goats_useful.head()"
    ]
@@ -239,7 +239,7 @@
    "source": [
     "columns = [\"partner\", \"n_of_individuals\", \"phenotype.purpose\", \"phenotype.köppen_group\", \"phenotype.chest_girth\", \n",
     "           \"phenotype.height\", \"phenotype.length\", \"phenotype.widthofpinbones\", \"phenotype.famacha\", \"phenotype.coat_color\", \n",
-    "           \"locations\", \"sex\"]\n",
+    "           \"locations.coordinates\", \"sex\"]\n",
     "d1 = dataset_samples[columns]\n",
     "d2 = pd.DataFrame({\"total\": dataset_samples.sum()[columns]}).transpose()\n",
     "d2 = d2.drop(\"partner\", axis=1)\n",
