:memo: work on documentation index

--- a/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
+++ b/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
@@ -198,6 +198,7 @@
     "sheep_by_chip.plot.pie(y=\"count\", figsize=(8,8), shadow=True, startangle=-45, rotatelabels=45, autopct='%1.1f%%', legend=False)\n",
     "_ = plt.title(\"Sheep samples by chip type\")\n",
     "plt.ylabel(None)\n",
+    "plt.savefig('sheep-samples-by-chip-type.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
