:monocle_face: explore 20210409 Uruguayan metadata

--- a/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
+++ b/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
@@ -76,6 +76,7 @@
     "datasets = pd.read_json(tmp).dropna(thresh=1, axis=1)\n",
     "datasets['type'] = datasets['type'].apply(lambda val: val[1])\n",
     "datasets = fix_id(datasets)\n",
+    "datasets.to_excel(\"smarter_datasets.xlsx\")\n",
     "datasets[['breed', 'country', 'species', 'type', 'partner', 'chip_name', 'n_of_individuals']]"
    ]
   },
