:monocle_face: update last INIA notebook

--- a/notebooks/exploratory/0.21.0-bunop-uruguay_second_upload.ipynb
+++ b/notebooks/exploratory/0.21.0-bunop-uruguay_second_upload.ipynb
@@ -126,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a89566bdd24a4e72b4377bd853272135",
+       "model_id": "769534a2b3da424d8ace0dd5176d7721",
        "version_major": 2,
        "version_minor": 0
       },
@@ -181,9 +181,8 @@
      "output_type": "stream",
      "text": [
       "81 reported in file\n",
-      "dataset has 46 samples\n",
-      "I could find only 38 samples in report file\n",
-      "Missing 8 samples in reportfile\n"
+      "dataset has 38 samples\n",
+      "I could find only 38 samples in report file\n"
      ]
     }
    ],
@@ -192,8 +191,7 @@
     "print(f\"{record.n_samples} reported in file\")\n",
     "print(f\"dataset has {inia_20210409.n_of_individuals} samples\")\n",
     "samples = list(filter(lambda name: 'cel_call_code' in name, get_header(path)))\n",
-    "print(f\"I could find only {len(samples)} samples in report file\")\n",
-    "print(f\"Missing {inia_20210409.n_of_individuals - len(samples)} samples in reportfile\")"
+    "print(f\"I could find only {len(samples)} samples in report file\")"
    ]
   },
   {
@@ -201,7 +199,7 @@
    "id": "f4a08ff3-7888-481e-aad0-be708185fa3f",
    "metadata": {},
    "source": [
-    "Well, even if the report tells that there are `81` samples, dataset has `46` samples and I could find only `38` samples in file. Try to force reading report with custom number of samples:"
+    "Well, even if the report tells that there are `81` samples, I could find only `38` samples in file. **Those missing samples were removed since they have a low quality**. Try to force reading report with custom number of samples:"
    ]
   },
   {
@@ -209,7 +207,15 @@
    "execution_count": 8,
    "id": "d4e405eb-f001-4e8c-8445-cb4f145f3998",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Limiting import to first 38 samples\n"
+     ]
+    }
+   ],
    "source": [
     "report = AffyReportIO(report=path)\n",
     "report.read_reportfile(n_samples=len(samples))"
@@ -237,7 +243,13 @@
        " '20211110_Genexa.xlsx',\n",
        " '20220301_Genexa.xlsx',\n",
        " '20220323_Genexa.xlsx',\n",
-       " '20220810_Genexa.xlsx']"
+       " '20220810_Genexa.xlsx',\n",
+       " '20210409_Genexa_fix.xlsx',\n",
+       " '20210824_Genexa_fix.xlsx',\n",
+       " '20211110_Genexa_fix.xlsx',\n",
+       " '20220301_Genexa_fix.xlsx',\n",
+       " '20220323_Genexa_fix.xlsx',\n",
+       " '20220810_Genexa_fix.xlsx']"
       ]
      },
      "execution_count": 9,
@@ -569,7 +581,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d50de0a4690a49b8b585d0e07ef49fb1",
+       "model_id": "a1d2534c498e4b2384e4867987a50435",
        "version_major": 2,
        "version_minor": 0
       },
@@ -625,8 +637,7 @@
      "text": [
       "191 reported in file\n",
       "dataset has 59 samples\n",
-      "I could find only 59 samples in report file\n",
-      "Missing 0 samples in reportfile\n"
+      "I could find only 59 samples in report file\n"
      ]
     }
    ],
@@ -635,16 +646,7 @@
     "print(f\"{record.n_samples} reported in file\")\n",
     "print(f\"dataset has {inia_20211110.n_of_individuals} samples\")\n",
     "samples = list(filter(lambda name: 'cel_call_code' in name.lower(), get_header(path)))\n",
-    "print(f\"I could find only {len(samples)} samples in report file\")\n",
-    "print(f\"Missing {inia_20211110.n_of_individuals - len(samples)} samples in reportfile\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "54dd3405-d332-4119-be5c-7867eb9de0b3",
-   "metadata": {},
-   "source": [
-    "This time I have all 59 samples defined in dataset"
+    "print(f\"I could find only {len(samples)} samples in report file\")"
    ]
   },
   {
@@ -652,7 +654,15 @@
    "execution_count": 21,
    "id": "07e79cd1-4122-4c0e-82c5-bc6c5a57ad96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Limiting import to first 59 samples\n"
+     ]
+    }
+   ],
    "source": [
     "report = AffyReportIO(report=path)\n",
     "report.read_reportfile(n_samples=len(samples))"
@@ -907,7 +917,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d8191763b934a62ac583d6671532583",
+       "model_id": "27573ce41f134e9599f1e1de10d9e219",
        "version_major": 2,
        "version_minor": 0
       },
@@ -962,9 +972,8 @@
      "output_type": "stream",
      "text": [
       "380 reported in file\n",
-      "dataset has 336 samples\n",
-      "I could find only 332 samples in report file\n",
-      "Missing 4 samples in reportfile\n"
+      "dataset has 332 samples\n",
+      "I could find only 332 samples in report file\n"
      ]
     }
    ],
@@ -973,16 +982,7 @@
     "print(f\"{record.n_samples} reported in file\")\n",
     "print(f\"dataset has {inia_20210824.n_of_individuals} samples\")\n",
     "samples = list(filter(lambda name: 'cel_call_code' in name.lower(), get_header(path)))\n",
-    "print(f\"I could find only {len(samples)} samples in report file\")\n",
-    "print(f\"Missing {inia_20210824.n_of_individuals - len(samples)} samples in reportfile\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bba220ec-f276-4a1d-b8cb-f5697a1cc4ce",
-   "metadata": {},
-   "source": [
-    "This time miss 4 samples from dataset"
+    "print(f\"I could find only {len(samples)} samples in report file\")"
    ]
   },
   {
@@ -990,7 +990,15 @@
    "execution_count": 33,
    "id": "c036c12d-6602-4ac1-83cb-511e5f46c598",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Limiting import to first 332 samples\n"
+     ]
+    }
+   ],
    "source": [
     "report = AffyReportIO(report=path)\n",
     "report.read_reportfile(n_samples=len(samples))"
@@ -1283,7 +1291,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b186d7b177a34ed4952466ec2338bac4",
+       "model_id": "e0ccb177a1eb42aa99a4e83635689a0c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1339,8 +1347,7 @@
      "text": [
       "96 reported in file\n",
       "dataset has 43 samples\n",
-      "I could find only 43 samples in report file\n",
-      "Missing 0 samples in reportfile\n"
+      "I could find only 43 samples in report file\n"
      ]
     }
    ],
@@ -1349,16 +1356,7 @@
     "print(f\"{record.n_samples} reported in file\")\n",
     "print(f\"dataset has {inia_20220301.n_of_individuals} samples\")\n",
     "samples = list(filter(lambda name: 'cel_call_code' in name.lower(), get_header(path)))\n",
-    "print(f\"I could find only {len(samples)} samples in report file\")\n",
-    "print(f\"Missing {inia_20220301.n_of_individuals - len(samples)} samples in reportfile\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5f106213-942f-4a6d-9ff5-4841612a5004",
-   "metadata": {},
-   "source": [
-    "This time all samples are in dataset"
+    "print(f\"I could find only {len(samples)} samples in report file\")"
    ]
   },
   {
@@ -1366,7 +1364,15 @@
    "execution_count": 45,
    "id": "f6de33f0-76a8-431c-8adb-de00923626de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Limiting import to first 43 samples\n"
+     ]
+    }
+   ],
    "source": [
     "report = AffyReportIO(report=path)\n",
     "report.read_reportfile(n_samples=len(samples))"
@@ -1621,7 +1627,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac93296214ee41fcaabd82d60a180085",
+       "model_id": "fd79df6530a240ae96364f435191656b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1677,8 +1683,7 @@
      "text": [
       "96 reported in file\n",
       "dataset has 25 samples\n",
-      "I could find only 25 samples in report file\n",
-      "Missing 0 samples in reportfile\n"
+      "I could find only 25 samples in report file\n"
      ]
     }
    ],
@@ -1687,16 +1692,7 @@
     "print(f\"{record.n_samples} reported in file\")\n",
     "print(f\"dataset has {inia_20220323.n_of_individuals} samples\")\n",
     "samples = list(filter(lambda name: 'cel_call_code' in name.lower(), get_header(path)))\n",
-    "print(f\"I could find only {len(samples)} samples in report file\")\n",
-    "print(f\"Missing {inia_20220323.n_of_individuals - len(samples)} samples in reportfile\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ba6347c6-7c60-4ef4-bf16-789dfea4debf",
-   "metadata": {},
-   "source": [
-    "This time all samples are in dataset"
+    "print(f\"I could find only {len(samples)} samples in report file\")"
    ]
   },
   {
@@ -1704,7 +1700,15 @@
    "execution_count": 57,
    "id": "1206720a-b489-430c-ac73-e7c614ba477d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Limiting import to first 25 samples\n"
+     ]
+    }
+   ],
    "source": [
     "report = AffyReportIO(report=path)\n",
     "report.read_reportfile(n_samples=len(samples))"
@@ -1959,7 +1963,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71755ef0fd5943f0ba3160a9da940bc3",
+       "model_id": "cd4405408ba44f3d85a42c0e955df7c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2015,8 +2019,7 @@
      "text": [
       "91 reported in file\n",
       "dataset has 35 samples\n",
-      "I could find only 35 samples in report file\n",
-      "Missing 0 samples in reportfile\n"
+      "I could find only 35 samples in report file\n"
      ]
     }
    ],
@@ -2025,16 +2028,7 @@
     "print(f\"{record.n_samples} reported in file\")\n",
     "print(f\"dataset has {inia_20220810.n_of_individuals} samples\")\n",
     "samples = list(filter(lambda name: 'cel_call_code' in name.lower(), get_header(path)))\n",
-    "print(f\"I could find only {len(samples)} samples in report file\")\n",
-    "print(f\"Missing {inia_20220810.n_of_individuals - len(samples)} samples in reportfile\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "28c536c5-d4f6-4d32-8ef3-8048ad36d6e6",
-   "metadata": {},
-   "source": [
-    "This time all samples are in dataset"
+    "print(f\"I could find only {len(samples)} samples in report file\")"
    ]
   },
   {
@@ -2047,6 +2041,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Limiting import to first 35 samples\n",
       "Missing 'chr_id' column in reportfile!\n",
       "Missing 'start' column in reportfile!\n",
       "Missing 'allele_a' column in reportfile!\n",
@@ -2064,7 +2059,7 @@
    "id": "1ae61154-5885-42e0-964e-9d9d8c63f5d7",
    "metadata": {},
    "source": [
-    "Ok, try to get metadata and understand which samples I miss"
+    "This dataset seems to lack of required columns, I will need to skip genotype check if I want to import this dataset. Try to get metadata and understand which samples I miss"
    ]
   },
   {
