:monocle_face: update reports for latest release

--- a/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
+++ b/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
@@ -5,7 +5,7 @@
    "id": "3cc84f47-db82-43eb-99fd-78768ecd2a99",
    "metadata": {},
    "source": [
-    "# SMARTER SUMMARY (2022/11/14)\n",
+    "# SMARTER SUMMARY (2022/12/23)\n",
     "* [Dataset composition](#datasets-composition)\n",
     "    - [Foreground / background datasets](#foreground-vs-background-datasets)\n",
     "    - [Datasets by chip type](#datasets-by-chip-type)\n",
@@ -25,6 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "from collections import defaultdict\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -73,7 +74,7 @@
    "outputs": [],
    "source": [
     "tmp = Dataset.objects.filter(type_=\"genotypes\").to_json()\n",
-    "datasets = pd.read_json(tmp).dropna(thresh=1, axis=1)\n",
+    "datasets = pd.DataFrame(data=json.loads(tmp))\n",
     "datasets['type'] = datasets['type'].apply(lambda val: val[1])\n",
     "datasets = fix_id(datasets)\n",
     "datasets.to_excel(\"smarter_datasets.xlsx\")\n",
